# calendar-sync

./: .env.example  .gitignore  Cargo.toml  README.md  sample_events.csv
src/: calendar.rs  cli.rs  coda.rs  csv_parser.rs  event.rs  main.rs
