[package]
name = "calendar_sync"
version = "0.1.0"
edition = "2021"
description = "CLI tool to sync calendar events from CSV/Google Sheets to Google Calendar"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Google Calendar API
google-calendar3 = "5.0"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["http2"] }

# OAuth2 (must match version used by google-calendar3)
yup-oauth2 = "9.0"

# CSV parsing
csv = "1.3"

# HTTP client for Coda API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
